# goit-pycore-hw-03

./: README.md  pyproject.toml  task_1.py  task_4.py
tasks/: __init__.py  task_2.py  task_3.py  task_4.py
tests/: __init__.py  test_task_1.py  test_task_2.py  test_task_3.py  test_task_4.py
